--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 before_script:
     - psql -c 'create database "blogful-test";' -U postgres
 script:
-    - PYTHONPATH=. python3 test_filters.py
-    - PYTHONPATH=. python3 test_views_integration.py
-    - PYTHONPATH=. python3 test_views_acceptance.py
+    - python test_filters.py
+    - python test_views_integration.py
+    - python test_views_acceptance.py
     # Add any other tests here
